src/styles.scss
body {
  margin: 0;
  padding: 0;
  padding-top: calc(46px + 16px);

  * {
    font-family: Roboto;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }

  h2 {
    font-family: Roboto;
    font-style: normal;
    font-weight: normal;

    font-size: 32px;
    line-height: 20px;
    margin-bottom: 38px;

    color: #000000;
  }
  h3 {
    font-family: Roboto;
    font-style: normal;
    font-weight: normal;
    font-size: 24px;
    line-height: 28px;

    color: #a8a8a8;
  }
  ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
  }
  input {
    height: 41px;
    padding: 0 7px;
    background-color: #f2f2f2;
    border: 1px solid #b5b5b5;
    border-radius: 5px;

    font-family: Roboto;
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 21px;

    color: #606060;
    outline: none;

    transition: color 0.35s ease;

    &:focus {
      color: #000;
    }

    &:-webkit-autofill,
    &:-webkit-autofill:hover,
    &:-webkit-autofill:focus,
    &:-webkit-autofill:active {
      -webkit-box-shadow: 0 0 0 30px rgba($accent_color, 0.1) inset !important;
    }
  }
}

button {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 19px;

  &.btn {
    @include button-reset;

    border-radius: 4px;

    &-accent {
      color: #ffffff;
      background-color: $accent_color;

      transition: background-color 0.35s ease;

      &:hover {
        background-color: rgba($accent_color, 0.85);
      }
    }
    &-secondary {
      color: #ffffff;
      background-color: $secondary_color;

      transition: background-color 0.35s ease;

      &:hover {
        background-color: rgba($secondary_color, 0.85);
      }
    }
    &.btn-p1 {
      padding: 8px 28px;
    }
    &.btn-p2 {
      padding: 8px 48px;
    }
  }
}

a,
.btn-link {
  color: $accent_color;
  text-decoration: none;

  &:hover {
    color: #72ada1;
  }

  &.route-link {
    position: relative;
    color: rgba($accent_color, 0.35);
    font-weight: 500;
    text-decoration: none;

    transition: color 0.35s ease;
    &:before {
      content: '';
      position: absolute;
      bottom: 3px;
      left: 12px;
      width: calc(100% - 24px);
      height: 2px;
      background-color: $accent_color;

      opacity: 0;

      transition: opacity 0.35s ease;
    }
    &.router-link-active {
      color: $accent_color;

      &:before {
        opacity: 1;
        transition-delay: 0.1s;
      }
    }
    &:hover {
      color: $accent_color;
    }
  }
}
.btn-link {
  @include button-reset;
}

#app {
}

// transition default styles
.v-enter-active,
.v-leave-active {
  transition: opacity 0.5s ease;
}

.v-enter-from,
.v-leave-to {
  opacity: 0;
}

.fieldset {
  display: flex;
  width: 100%;
  align-items: center;
  margin-bottom: 16px;
  &__label {
    margin-right: 16px;
  }
  &__title {
    font-size: 24px;
    color: gray;
    margin: 0 0 16px 0;
    border-bottom: 1px solid black;
    display: inline-block;
  }
}
.fieldsetGroup {
  margin-bottom: 36px;

  .fieldset {
    &__input {
      margin-right: 10px;
      &:last-child {
        margin-right: 0;
      }
    }
  }
  &.wl-25 {
    .fieldset__label {
      width: 25%;
    }
  }
  &.wl-15 {
    .fieldset__label {
      width: 15%;
    }
  }

  &.wi-5 {
    .fieldset__input {
      width: 5%;
    }
  }
  &.wi-10 {
    .fieldset__input {
      width: 10%;
    }
  }
}

@media (max-width: 1440px) {
  body {
    h2 {
      font-size: 36px;
      line-height: 44px;
    }
    button {
      font-size: 16px;
    }
  }
}

